--- a/front/package.json
+++ b/front/package.json
@@ -4,6 +4,7 @@
   "description": "Frontend of Pulpe application.",
   "main": "index.js",
   "scripts": {
+    "start": "concurrently \"tsc -w\" \"lite-server\" ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
