--- a/front/package.json
+++ b/front/package.json
@@ -30,6 +30,7 @@
     "angular-in-memory-web-api": "~0.2.4",
     "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
+    "daemonite-material": "^4.0.0-alpha.6",
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
     "mdbootstrap": "^4.3.0",
