--- a/front/package.json
+++ b/front/package.json
@@ -1,61 +1,51 @@
 {
-  "name": "pulpe-front",
-  "version": "1.0.0",
-  "description": "Frontend of Pulpe application.",
-  "main": "index.js",
-  "scripts": {
-    "start": "concurrently \"tsc -w\" \"lite-server\" ",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/neogenz/Pulpe.git"
-  },
-  "author": "MDS & AA",
+  "name": "front-pulpe",
+  "version": "0.0.0",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/neogenz/Pulpe/issues"
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
-  "homepage": "https://github.com/neogenz/Pulpe#readme",
+  "private": true,
   "dependencies": {
-    "@angular/common": "~2.4.0",
-    "@angular/compiler": "~2.4.0",
-    "@angular/core": "~2.4.0",
-    "@angular/forms": "~2.4.0",
-    "@angular/http": "~2.4.0",
     "@angular/material": "^2.0.0-beta.2",
-    "@angular/platform-browser": "~2.4.0",
-    "@angular/platform-browser-dynamic": "~2.4.0",
-    "@angular/router": "~3.4.0",
-    "angular-in-memory-web-api": "~0.2.4",
-    "chart.js": "^2.5.0",
+    "@angular/common": "^2.4.0",
+    "@angular/compiler": "^2.4.0",
+    "@angular/core": "^2.4.0",
+    "@angular/forms": "^2.4.0",
+    "@angular/http": "^2.4.0",
+    "@angular/platform-browser": "^2.4.0",
+    "@angular/platform-browser-dynamic": "^2.4.0",
+    "@angular/router": "^3.4.0",
     "core-js": "^2.4.1",
+    "rxjs": "^5.1.0",
+    "zone.js": "^0.7.6",
     "daemonite-material": "^4.0.0-alpha.6",
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
-    "mdbootstrap": "^4.3.0",
-    "ng2-charts": "^1.5.0",
-    "rxjs": "5.0.1",
-    "systemjs": "0.19.40",
-    "tether": "^1.4.0",
-    "zone.js": "^0.7.4"
+    "tether": "^1.4.0"
   },
   "devDependencies": {
-    "@types/jasmine": "2.5.36",
-    "@types/node": "^6.0.46",
-    "canonical-path": "0.0.2",
-    "concurrently": "^3.2.0",
-    "jasmine-core": "~2.4.1",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
+    "@angular/cli": "1.0.0-rc.0",
+    "@angular/compiler-cli": "^2.4.0",
+    "@types/jasmine": "2.5.38",
+    "@types/node": "~6.0.60",
+    "codelyzer": "~2.0.0",
+    "jasmine-core": "~2.5.2",
+    "jasmine-spec-reporter": "~3.2.0",
+    "karma": "~1.4.1",
+    "karma-chrome-launcher": "~2.0.0",
+    "karma-cli": "~1.0.1",
+    "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "lite-server": "^2.2.2",
-    "lodash": "^4.16.4",
-    "protractor": "~4.0.14",
-    "rimraf": "^2.5.4",
-    "tslint": "^3.15.1",
-    "typescript": "~2.0.10"
+    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "protractor": "~5.1.0",
+    "ts-node": "~2.0.0",
+    "tslint": "~4.4.2",
+    "typescript": "~2.0.0"
   }
 }
