--- a/front/package.json
+++ b/front/package.json
@@ -21,10 +21,14 @@
     "@angular/platform-browser": "^2.4.0",
     "@angular/platform-browser-dynamic": "^2.4.0",
     "@angular/router": "^3.4.0",
+    "bootstrap": "^4.0.0-alpha.6",
+    "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
     "daemonite-material": "^4.0.0-alpha.6",
     "font-awesome": "^4.7.0",
+    "ionicons": "^3.0.0",
     "jquery": "^3.1.1",
+    "ng2-charts": "^1.5.0",
     "rxjs": "^5.1.0",
     "tether": "^1.4.0",
     "zone.js": "^0.7.6"
