--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/.bin/nodemon server.js"
+    "start": "./node_modules/.bin/nodemon server.js",
+    "mongo": "mongod --dbpath=./_db/"
   },
   "repository": {
     "type": "git",
