--- a/back/package.json
+++ b/back/package.json
@@ -28,6 +28,8 @@
   },
   "homepage": "https://github.com/neogenz/Pulpe#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.17.1",
     "cors": "^2.8.3",
     "express": "^4.15.2",
     "grunt": "^1.0.1",
