--- a/front/package.json
+++ b/front/package.json
@@ -29,6 +29,7 @@
     "daemonite-material": "^4.0.0-alpha.6",
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
+    "moment": "^2.18.1",
     "ng2-charts": "^1.5.0",
     "ng2-slim-loading-bar": "^4.0.0",
     "rxjs": "^5.1.0",
