--- a/back/package.json
+++ b/back/package.json
@@ -34,6 +34,7 @@
     "express": "^4.15.2",
     "grunt": "^1.0.1",
     "jsonwebtoken": "^7.3.0",
+    "moment": "^2.18.1",
     "mongoose": "^4.9.6",
     "morgan": "^1.8.1",
     "nodemon": "^1.11.0"
