Program generation on backend, refacto of navbar to sidebar

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,7 @@ front/src/assets/fonts/fitness-font\.zip
 front/src/assets/fonts/ionicons-2\.0\.1\.zip
 
 front/src/assets/\.sass-cache/
+
+front/\.sass-cache/
+
+taches-realisees\.txt
