--- a/front/package.json
+++ b/front/package.json
@@ -31,6 +31,7 @@
     "jquery": "^3.1.1",
     "moment": "^2.18.1",
     "ng-sidebar": "^4.2.3",
+    "ng2-bootstrap-modal": "^1.0.1",
     "ng2-charts": "^1.5.0",
     "ng2-slim-loading-bar": "^4.0.0",
     "rxjs": "^5.1.0",
@@ -43,6 +44,7 @@
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
+    "electron": "^1.6.11",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
     "karma": "~1.4.1",
