--- a/back/package.json
+++ b/back/package.json
@@ -37,6 +37,7 @@
     "moment": "^2.18.1",
     "mongoose": "^4.9.6",
     "morgan": "^1.8.1",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "underscore": "^1.8.3"
   }
 }
