--- a/front/package.json
+++ b/front/package.json
@@ -12,34 +12,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.4.0",
-    "@angular/compiler": "^2.4.0",
-    "@angular/core": "^2.4.0",
-    "@angular/forms": "^2.4.0",
-    "@angular/http": "^2.4.0",
-    "@angular/material": "2.0.0-beta.2",
-    "@angular/platform-browser": "^2.4.0",
-    "@angular/platform-browser-dynamic": "^2.4.0",
-    "@angular/router": "^3.4.0",
+    "@angular/animations": "^4.2.3",
+    "@angular/common": "^4.2.3",
+    "@angular/compiler": "^4.2.3",
+    "@angular/compiler-cli": "^4.2.3",
+    "@angular/core": "^4.2.3",
+    "@angular/forms": "^4.2.3",
+    "@angular/http": "^4.2.3",
+    "@angular/material": "git+https://github.com/angular/material2-builds.git",
+    "@angular/platform-browser": "^4.2.3",
+    "@angular/platform-browser-dynamic": "^4.2.3",
+    "@angular/platform-server": "^4.2.3",
+    "@angular/router": "^4.2.3",
+    "@ultimate/ngxerrors": "^1.3.0",
     "angular-2-local-storage": "^1.0.1",
-    "angular2-jwt": "^0.2.2",
+    "angular2-jwt": "^0.2.3",
     "bootstrap": "^4.0.0-alpha.6",
-    "chart.js": "^2.5.0",
+    "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
     "daemonite-material": "^4.0.0-alpha.6",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.1.1",
+    "jquery": "^3.2.1",
     "moment": "^2.18.1",
     "ng-sidebar": "^4.2.3",
     "ng2-bootstrap-modal": "^1.0.1",
-    "ng2-charts": "^1.5.0",
+    "ng2-charts": "^1.6.0",
     "ng2-slim-loading-bar": "^4.0.0",
-    "rxjs": "^5.1.0",
+    "rxjs": "^5.4.1",
     "tether": "^1.4.0",
-    "zone.js": "^0.7.6"
+    "typescript": "^2.3.4",
+    "zone.js": "^0.8.12"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0-rc.0",
+    "@angular/cli": "^1.1.2",
     "@angular/compiler-cli": "^2.4.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
@@ -48,7 +53,7 @@
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
     "karma": "~1.4.1",
-    "karma-chrome-launapproximateTimecher": "~2.0.0",
+    "karma-chrome-launcher": "^2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
