--- a/front/package.json
+++ b/front/package.json
@@ -50,6 +50,8 @@
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
     "electron": "^1.6.11",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
     "karma": "~1.4.1",
