--- a/back/package.json
+++ b/back/package.json
@@ -38,6 +38,7 @@
     "mongoose": "^4.9.6",
     "morgan": "^1.8.1",
     "nodemon": "^1.11.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "winston": "^2.3.1"
   }
 }
