--- a/front/package.json
+++ b/front/package.json
@@ -38,6 +38,7 @@
     "ng2-bootstrap-modal": "^1.0.1",
     "ng2-charts": "^1.6.0",
     "ng2-slim-loading-bar": "^4.0.0",
+    "ngx-toastr": "^5.2.5",
     "rxjs": "^5.4.1",
     "tether": "^1.4.0",
     "typescript": "^2.3.4",
