--- a/back/package.json
+++ b/back/package.json
@@ -32,11 +32,13 @@
     "body-parser": "^1.17.1",
     "cors": "^2.8.3",
     "express": "^4.15.2",
+    "generate-password": "^1.3.0",
     "grunt": "^1.0.1",
     "jsonwebtoken": "^7.3.0",
     "moment": "^2.18.1",
     "mongoose": "^4.9.6",
     "morgan": "^1.8.1",
+    "nodemailer": "^4.0.1",
     "nodemon": "^1.11.0",
     "underscore": "^1.8.3",
     "winston": "^2.3.1"
